# DevOpsTest

./: CMakeLists.txt  azure-pipelines-windows-mingw.yml  azure-pipelines.yml  main.cpp
BuildSystem/: build.py
BuildSystem/buildtools/classes/: Builder.py  Documentation.py  Globals.py  System.py
